# cliniqai

./: .eslintrc.js  .gitignore  .pnpm-approve-builds.json  PLAN.md  README.md  docker-compose.staging.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
apps/mobile/: .env.example  app.json  package.json
apps/mobile/src/: theme.ts
apps/web/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  railway.toml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/web/e2e/: auth.spec.ts  (+1 more)
docs/: PREREQUISITES.md
docs/ai/: AI_INTEGRATIONS.md
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md  DATA_MODEL.md
docs/setup/: SETUP.md
scripts/: demo-setup.sh
services/ai/: .env.example  Dockerfile  pyproject.toml  pyrightconfig.json
services/ai/app/: config.py  main.py
services/ai/app/middleware/: auth.py
services/ai/app/routers/: alerts.py  ddi.py  diagnosis.py  discharge.py  documents.py  embed.py  imaging.py  lab.py  longitudinal.py  notes.py  prescription.py  records.py  voice.py
services/ai/app/services/: ddi_fallback.py  embedding_client.py  vertex_client.py
services/ai/scripts/: seed_ddi_db.py
services/ai/tests/: conftest.py  test_alerts.py  test_ddi.py  test_embedding.py  test_health.py
services/api/: .env.example  Dockerfile  package-lock.json  package.json  railway.toml  tsconfig.json  vitest.config.ts
services/fhir/: .env.example  package.json
services/notifications/: .env.example  package.json
(+167 files in other folders)
